Fixing Responsive, toolbar spacing and links margin

--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -445,22 +445,33 @@ header.site-header .mobile-nav > li:first-child {
   font-family: "Blair ITC Medium", Arial, Helvetica, sans-serif;
 }
 .header-full-height__container .header-full-height__logo {
-  width: 60%;
+  width: 75%;
   max-width: 100%;
   margin-bottom: 35px;
+}
+@media screen and (min-width: 600px) {
+  .header-full-height__container .header-full-height__logo {
+    width: 60%;
+  }
 }
 .header-full-height__container .header-full-height__logo img {
   width: 100%;
 }
 .header-full-height__container .header-full-height__toolbar {
   width: 100%;
-  padding: 0 35px;
-  padding-top: 35px;
+  padding: 0 15px;
+  padding-top: 18px;
+}
+@media screen and (min-width: 600px) {
+  .header-full-height__container .header-full-height__toolbar {
+    padding: 0 18px;
+    padding-top: 25px;
+  }
 }
 @media screen and (min-width: 1136px) {
   .header-full-height__container .header-full-height__toolbar {
-    padding-left: 18px;
-    padding-right: 18px;
+    padding: 0 35px;
+    padding-top: 35px;
   }
 }
 @media screen and (min-width: 1136px) {
@@ -492,6 +503,11 @@ header.site-header .mobile-nav > li:first-child {
 .header-full-height__container .header-full-height__menu .h-f-h--linklist .h-f-h--linklist-item {
   padding: 8px 0;
 }
+@media screen and (max-width: 1135px) {
+  .header-full-height__container .header-full-height__menu .h-f-h--linklist .h-f-h--linklist-item {
+    margin: 0 10px;
+  }
+}
 .header-full-height__container .header-full-height__menu .h-f-h--linklist .h-f-h--linklist-item .h-f-h--linklist-link {
   text-transform: uppercase;
   font-size: 1.3rem;
@@ -507,11 +523,13 @@ header.site-header .mobile-nav > li:first-child {
   background-color: black;
   z-index: 1;
 }
-.header-full-height__container .header-full-height__menu .h-f-h--linklist:hover .h-f-h--has-dropdown > .h-f-h--child-linklist {
-  display: block;
-}
-.header-full-height__container .header-full-height__menu .h-f-h--linklist:hover:after {
-  display: block;
+@media screen and (min-width: 1136px) {
+  .header-full-height__container .header-full-height__menu .h-f-h--linklist:hover .h-f-h--has-dropdown > .h-f-h--child-linklist {
+    display: block;
+  }
+  .header-full-height__container .header-full-height__menu .h-f-h--linklist:hover:after {
+    display: block;
+  }
 }
 .header-full-height__container .header-full-height__menu .h-f-h--child-linklist {
   display: none;
